spade-tests/src/snapshots/spade_tests__hir_lowering__tests__expected_unit.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn f() -> bool {
    let x = 0;
    x()
}


error: Expected x to be a unit
  ┌─ testinput:3:5
  │
2 │     let x = 0;
  │         - x is a variable
3 │     x()
  │     ^ Expected a unit


